assets/css/image-gallery.css
.image-gallery {
  overflow: auto; 
  margin-left: -1%!important;
  display: flex;
  flex-wrap: wrap;
  gap: 1%;
}
.image-gallery li {
  float: left; 
  display: block; 
  margin: 0 0 1% 1%; 
  width: 19%;
}
.image-gallery li a {
  text-align: center; 
  text-decoration: none!important; 
  color: #777;
}
.image-gallery li a span {
  display: block; 
  text-overflow: ellipsis; 
  overflow: hidden; 
  white-space: nowrap; 
  padding: 3px 0;
}
.image-gallery li a img {
  width: 100%; 
  display: block;
  border-radius: 8px;
}

